--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,8 +66,8 @@
 							<div class="navbar-end">
 								<a class="navbar-item is-tab" href="{% link index.html %}">Home</a>
 								<a class="navbar-item is-tab" href="{% link index.html %}#projects">Education</a>
-								<a class="navbar-item is-tab" href="{% link apps.html %}">Work</a>
-								<a class="navbar-item is-tab" href="{% link donate.md %}">Projects</a>
+								<a class="navbar-item is-tab" href="{% link index.html %}">Work</a>
+								<a class="navbar-item is-tab" href="{% link apps.html %}">Projects</a>
 								<a class="navbar-item is-tab" href="{% link thanks.md %}">Fun</a>
 								
 								<a class="navbar-item is-tab" href="{% link contact.md %}">Contact</a>
