--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
 						<div class="navbar-menu">
 							<div class="navbar-end">
 								<a class="navbar-item is-tab" href="{% link index.html %}">Home</a>
-								<a class="navbar-item is-tab" href="{% link index.html %}#projects">Education</a>
+								<a class="navbar-item is-tab" href="{% link donate.md %}">Education</a>
 								<a class="navbar-item is-tab" href="{% link index.html %}">Work</a>
 								<a class="navbar-item is-tab" href="{% link apps.html %}">Projects</a>
 								<a class="navbar-item is-tab" href="{% link apps.html %}">Leisure</a>
