--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,7 @@
 							<div class="navbar-end">
 								<a class="navbar-item is-tab" href="{% link index.html %}">Home</a>
 								<a class="navbar-item is-tab" href="{% link donate.md %}">Education</a>
-								<a class="navbar-item is-tab" href="{% link donate.md %}">Work</a>
+								<a class="navbar-item is-tab" href="{% link about.md %}">Work</a>
 								<a class="navbar-item is-tab" href="{% link projects.html %}">Projects</a>
 								<a class="navbar-item is-tab" href="{% link apps.html %}">Leisure</a>
 								
