--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,17 @@
 		{% else %}
 			<meta property="og:image" content="https://sindresorhus.com/sindre-sorhus.jpg">
 		{% endif %}
+		
+		{% if page.collection == 'projects' %}
+			{% for file in site.static_files %}
+				{% assign path = '/assets_project/' | append: page.slug | append: '/icon' %}
+				{% if file.path contains path %}
+					<meta property="og:image" content="{{ file.path | absolute_url }}">
+				{% endif %}
+			{% endfor %}
+		{% else %}
+			<meta property="og:image" content="https://sindresorhus.com/sindre-sorhus.jpg">
+		{% endif %}
 		<meta name="twitter:card" content="summary">
 		<meta name="twitter:site" content="@sindresorhus">
 		<meta name="twitter:creator" content="@sindresorhus">
@@ -67,7 +78,7 @@
 								<a class="navbar-item is-tab" href="{% link index.html %}">Home</a>
 								<a class="navbar-item is-tab" href="{% link donate.md %}">Education</a>
 								<a class="navbar-item is-tab" href="{% link about.md %}">Work</a>
-								<a class="navbar-item is-tab" href="{% link apps.html %}">Projects</a>
+								<a class="navbar-item is-tab" href="{% link projects.html %}">Projects</a>
 								<a class="navbar-item is-tab" href="{% link apps.html %}">Leisure</a>
 								
 								<a class="navbar-item is-tab" href="{% link contact.md %}">Contact</a>
