--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#3273DC">
-		<meta name="author" content="Sindre Sorhus">
+		<meta name="author" content="Ishan Kumar">
 		{% capture description %}{% if page.description %}{{ page.description | strip_html }}{% else %}{{ site.description }}{% endif %}{% endcapture %}
 		<meta name="description" content="{{ description }}">
 		<meta property="og:type" content="website">
@@ -26,7 +26,7 @@
 		<meta name="twitter:creator" content="@sindresorhus">
 		<meta name="x-build-time" content="{{ site.time | date_to_rfc822 }}">
 		<title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
-		<link rel="alternate" type="application/rss+xml" title="Sindre Sorhus' blog" href="https://blog.sindresorhus.com/feed">
+		<link rel="alternate" type="application/rss+xml" title="Ishan Kumar' blog" href="https://blog.sindresorhus.com/feed">
 		<link rel="preload" href="{{ '/font-awesome.woff' | relative_url }}" as="font" crossorigin>
 		<link rel="icon" href="{{ '/favicon.png' | relative_url }}" sizes="32x32">
 		<link rel="stylesheet" href="{{ '/main.css' | relative_url }}">
@@ -54,7 +54,7 @@
 							{% if page.url == '/' %}
 								<a id="unicorn-btn" class="navbar-item" href="https://sindresorhus.com/unicorn" title="Click me!">🦄</a>
 							{% else %}
-								<span class="navbar-item">Sindre Sorhus</span>
+								<span class="navbar-item">Ishan Kumar </span>
 							{% endif %}
 							<a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
 								<span aria-hidden="true"></span>
