--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@
 								<a class="navbar-item is-tab" href="{% link project.md %}">Projects</a>
 								<a class="navbar-item is-tab" href="{% link apps.html %}">Leisure</a>
 								
-								<a class="navbar-item is-tab" href="{% link contact.md %}">Contact</a>
+								<a class="navbar-item is-tab" href="/uploads/media/default/0001/01/540cb75550adf33f281f29132dddd14fded85bfc.pdf">Contact</a>
 								
 							</div>
 						</div>
