--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,7 @@
 								<a class="navbar-item is-tab" href="{% link work.md %}">Work</a>
 								<a class="navbar-item is-tab" href="{% link project.md %}">Projects</a>
 								<a class="navbar-item is-tab" href="{% link apps.html %}">Leisure</a>
-								
+								<p>Open a PDF file <a href="/uploads/media/default/0001/01/540cb75550adf33f281f29132dddd14fded85bfc.pdf">example</a>.</p>
 								<a class="navbar-item is-tab" href="/uploads/media/default/0001/01/540cb75550adf33f281f29132dddd14fded85bfc.pdf">Contact</a>
 								
 							</div>
