--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@
 								<a class="navbar-item is-tab" href="{% link project.md %}">Projects</a>
 								<a class="navbar-item is-tab" href="{% link apps.html %}">Leisure</a>
 								
-								<a class="navbar-item is-tab" href="Resume2019.pdf">Resume</a>
+								<a class="navbar-item is-tab" href="404.html">Resume</a>
 								
 							</div>
 						</div>
